--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Raoul MISSODEY
-logo: /assets/img/headshot_circle.png
+logo: /assets/Raoul_Portrait.JPG
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-architect
