--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Raoul MISSODEY
 logo: /assets/Raoul_Portrait.JPG
 #description: text below image
 show_downloads: true
-theme: jekyll-theme-hacker
+theme: jekyll-theme-minimal
